evaluate_inteview_page

--- a/resources/assets/sass/layouts/_nav.scss
+++ b/resources/assets/sass/layouts/_nav.scss
@@ -2,6 +2,7 @@ body {
     background: white;
 }
 nav {
+    margin-bottom: 0!important;
     ul.navbar-right {
         form.navbar-form{
             width: 300px;
