--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -9,3 +9,4 @@
 @import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
 @import "layouts/nav";
 @import "layouts/wrapper";
+@import "welcome";
